--- a/pandas/2-pandas-kmeans.ipynb
+++ b/pandas/2-pandas-kmeans.ipynb
@@ -7,8 +7,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-18T10:40:13.586722Z",
-     "start_time": "2024-03-18T10:40:13.561423Z"
+     "end_time": "2024-03-18T15:00:38.021378900Z",
+     "start_time": "2024-03-18T15:00:37.955277200Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T10:40:13.626033Z",
-     "start_time": "2024-03-18T10:40:13.588729Z"
+     "end_time": "2024-03-18T15:00:38.037291100Z",
+     "start_time": "2024-03-18T15:00:37.984382300Z"
     }
    },
    "id": "86a345bc7d14d76a",
@@ -66,8 +66,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T10:40:13.635731Z",
-     "start_time": "2024-03-18T10:40:13.627038Z"
+     "end_time": "2024-03-18T15:00:38.049416Z",
+     "start_time": "2024-03-18T15:00:38.030896100Z"
     }
    },
    "id": "69af164b7f0c3ba5",
@@ -97,8 +97,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T10:40:13.646906Z",
-     "start_time": "2024-03-18T10:40:13.637737Z"
+     "end_time": "2024-03-18T15:00:38.065483600Z",
+     "start_time": "2024-03-18T15:00:38.041297400Z"
     }
    },
    "id": "417a48ede2b99b95",
@@ -111,14 +111,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Dev\\Miniconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n"
+      "C:\\Dev\\Miniconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1412: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  super()._check_params_vs_input(X, default_n_init=10)\n"
      ]
     },
     {
      "data": {
-      "text/plain": "      Row ID  Customer Name     Sales    Profit  Cluster\n0          1  Darren Powers  0.000702  0.440370        3\n1          2  Phillina Ober  0.000132  0.439634        3\n2          3  Phillina Ober  0.000496  0.440285        3\n3          4  Phillina Ober  0.012023  0.435682        3\n4          5     Mick Brown  0.000838  0.440325        3\n...      ...            ...       ...       ...      ...\n7323    7324  Henry Goldwyn  0.001287  0.440534        3\n7324    7325        Jim Epp  0.132494  0.535999        2\n7325    7326    Daniel Byrd  0.029657  0.452543        0\n7326    7327   Denny Ordway  0.003728  0.441472        3\n7327    7328   Chad McGuire  0.029907  0.451745        0\n\n[7328 rows x 5 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Row ID</th>\n      <th>Customer Name</th>\n      <th>Sales</th>\n      <th>Profit</th>\n      <th>Cluster</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Darren Powers</td>\n      <td>0.000702</td>\n      <td>0.440370</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Phillina Ober</td>\n      <td>0.000132</td>\n      <td>0.439634</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Phillina Ober</td>\n      <td>0.000496</td>\n      <td>0.440285</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Phillina Ober</td>\n      <td>0.012023</td>\n      <td>0.435682</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Mick Brown</td>\n      <td>0.000838</td>\n      <td>0.440325</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7323</th>\n      <td>7324</td>\n      <td>Henry Goldwyn</td>\n      <td>0.001287</td>\n      <td>0.440534</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7324</th>\n      <td>7325</td>\n      <td>Jim Epp</td>\n      <td>0.132494</td>\n      <td>0.535999</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7325</th>\n      <td>7326</td>\n      <td>Daniel Byrd</td>\n      <td>0.029657</td>\n      <td>0.452543</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>7326</th>\n      <td>7327</td>\n      <td>Denny Ordway</td>\n      <td>0.003728</td>\n      <td>0.441472</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7327</th>\n      <td>7328</td>\n      <td>Chad McGuire</td>\n      <td>0.029907</td>\n      <td>0.451745</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n<p>7328 rows × 5 columns</p>\n</div>"
+      "text/plain": "      Row ID  Customer Name     Sales    Profit  Cluster\n0          1  Darren Powers  0.000702  0.440370        0\n1          2  Phillina Ober  0.000132  0.439634        0\n2          3  Phillina Ober  0.000496  0.440285        0\n3          4  Phillina Ober  0.012023  0.435682        0\n4          5     Mick Brown  0.000838  0.440325        0\n...      ...            ...       ...       ...      ...\n7323    7324  Henry Goldwyn  0.001287  0.440534        0\n7324    7325        Jim Epp  0.132494  0.535999        3\n7325    7326    Daniel Byrd  0.029657  0.452543        2\n7326    7327   Denny Ordway  0.003728  0.441472        0\n7327    7328   Chad McGuire  0.029907  0.451745        2\n\n[7328 rows x 5 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Row ID</th>\n      <th>Customer Name</th>\n      <th>Sales</th>\n      <th>Profit</th>\n      <th>Cluster</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Darren Powers</td>\n      <td>0.000702</td>\n      <td>0.440370</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Phillina Ober</td>\n      <td>0.000132</td>\n      <td>0.439634</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Phillina Ober</td>\n      <td>0.000496</td>\n      <td>0.440285</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Phillina Ober</td>\n      <td>0.012023</td>\n      <td>0.435682</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Mick Brown</td>\n      <td>0.000838</td>\n      <td>0.440325</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7323</th>\n      <td>7324</td>\n      <td>Henry Goldwyn</td>\n      <td>0.001287</td>\n      <td>0.440534</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>7324</th>\n      <td>7325</td>\n      <td>Jim Epp</td>\n      <td>0.132494</td>\n      <td>0.535999</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>7325</th>\n      <td>7326</td>\n      <td>Daniel Byrd</td>\n      <td>0.029657</td>\n      <td>0.452543</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7326</th>\n      <td>7327</td>\n      <td>Denny Ordway</td>\n      <td>0.003728</td>\n      <td>0.441472</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>7327</th>\n      <td>7328</td>\n      <td>Chad McGuire</td>\n      <td>0.029907</td>\n      <td>0.451745</td>\n      <td>2</td>\n    </tr>\n  </tbody>\n</table>\n<p>7328 rows × 5 columns</p>\n</div>"
      },
      "execution_count": 10,
      "metadata": {},
@@ -136,8 +136,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-18T10:40:14.087018Z",
-     "start_time": "2024-03-18T10:40:13.647912Z"
+     "end_time": "2024-03-18T15:00:38.736578500Z",
+     "start_time": "2024-03-18T15:00:38.053482400Z"
     }
    },
    "id": "2a1bb13edf2588f7",
